[gd_scene load_steps=11 format=3 uid="uid://beoxyu150c3qn"]

[ext_resource type="Script" path="res://source/scene/UI/resources_nav.gd" id="1_52y8x"]
[ext_resource type="Texture2D" uid="uid://h0xx1ojkx1x1" path="res://assets/texture/ui/icons/fa131.png" id="1_msnpq"]
[ext_resource type="Texture2D" uid="uid://wwxd2vnf6vka" path="res://assets/texture/ui/icons/fa252.png" id="2_fsbjw"]
[ext_resource type="Texture2D" uid="uid://dp2qym1q34txs" path="res://assets/texture/ui/icons/fa27.png" id="3_qv438"]
[ext_resource type="Texture2D" uid="uid://daljc0a8o0exe" path="res://assets/texture/ui/icons/fa232.png" id="4_ao4tv"]
[ext_resource type="Texture2D" uid="uid://cubck4d2urquv" path="res://assets/texture/ui/icons/fa209.png" id="5_0eyqf"]
[ext_resource type="Texture2D" uid="uid://dykds68arbvrc" path="res://assets/texture/ui/icons/fa193.png" id="6_warts"]
[ext_resource type="Texture2D" uid="uid://o6oym5ndi181" path="res://assets/texture/ui/icons/fa000.png" id="7_fxhpm"]
[ext_resource type="Texture2D" uid="uid://dmdsyl8jpi8sa" path="res://assets/texture/ui/icons/fa6.png" id="8_dyfv0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_loxd7"]
bg_color = Color(1, 1, 1, 0.313726)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[node name="ResourcesNav" type="Control"]
custom_minimum_size = Vector2(380, 20)
layout_mode = 3
anchors_preset = 0
offset_right = 380.0
offset_bottom = 20.0
script = ExtResource("1_52y8x")

[node name="NavBox" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_loxd7")

[node name="HBoxContainer" type="HBoxContainer" parent="NavBox"]
custom_minimum_size = Vector2(380, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NavBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 24

[node name="HBoxContainer" type="HBoxContainer" parent="NavBox/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Control" type="Control" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(43, 18)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.5
offset_right = -3.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_msnpq")
stretch_mode = 3

[node name="CoinCountLabel" type="Label" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "9999"
vertical_alignment = 1

[node name="Control2" type="Control" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(43, 18)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control2"]
custom_minimum_size = Vector2(43, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control2/HBoxContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_fsbjw")
stretch_mode = 3

[node name="WoodCountLabel" type="Label" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "9999"
vertical_alignment = 1

[node name="Control3" type="Control" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(43, 18)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control3"]
custom_minimum_size = Vector2(43, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control3/HBoxContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_qv438")
stretch_mode = 3

[node name="StoneCountLabel" type="Label" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "9999"
vertical_alignment = 1

[node name="Control4" type="Control" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(43, 18)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control4"]
custom_minimum_size = Vector2(43, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control4/HBoxContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("4_ao4tv")
stretch_mode = 3

[node name="BoneCountLabel" type="Label" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control4/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "9999"
vertical_alignment = 1

[node name="Control5" type="Control" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(43, 18)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control5"]
custom_minimum_size = Vector2(43, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control5/HBoxContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("5_0eyqf")
stretch_mode = 3

[node name="IronOreCountLabel" type="Label" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control5/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "9999"
vertical_alignment = 1

[node name="Control6" type="Control" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(43, 18)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control6"]
custom_minimum_size = Vector2(43, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control6/HBoxContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("6_warts")
stretch_mode = 3

[node name="CopperOreCountLabel" type="Label" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control6/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "9999"
vertical_alignment = 1

[node name="Control7" type="Control" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(43, 18)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control7"]
custom_minimum_size = Vector2(43, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control7/HBoxContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("7_fxhpm")
stretch_mode = 3

[node name="GoldOreCountLabel" type="Label" parent="NavBox/HBoxContainer/MarginContainer/HBoxContainer/Control7/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "9999"
vertical_alignment = 1

[node name="ResourcesButton" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 1
offset_right = 20.0
offset_bottom = 20.0
texture_normal = ExtResource("8_dyfv0")
stretch_mode = 3
